# data-eng01

./: .pre-commit-config.yaml  README.md  del_me_file01.py  pyproject.toml  requirements.txt  setup.py
notebooks/: tracker_clustering20230526.ipynb  web_scraping.ipynb
scripts/object_orientated_progr/: app01_class_constructor.py  app02_class_vs_static_methods.py  app03_inheritance.py  helpers.py  item.py  phone.py
src/: scraping_stocks.py
tests/: test_scraping_stocks.py
