[project]
name = "data-eng01"  # Required

# Versions should comply with PEP 440:
version = "1.0.0"  # Required

# This is a one-line description or tagline of what your project does. This
description = "Scripts wrt data engineering"  # Optional


# Specify which Python versions you support. 
requires-python = ">=3.10, <4"

# This is either text indicating the license for the distribution, or a file
# that contains the license
# https://packaging.python.org/en/latest/specifications/core-metadata/#license

# This field adds keywords for your project which will appear on the
keywords = ["sample", "setuptools", "development"]  # Optional

# This should be your name or the name of the organization who originally
# authored the project, and a valid email address corresponding to the name
# listed.
authors = [
  {name = "Clemens Harasewycz", email = "clemens.harasewycz@outlook.de" } # Optional
]


# This field lists other packages that your project depends on to run.
dependencies=[
        'PyYAML',
        'numpy>=1.23.0',
        'matplotlib>=2.2.0',
        'pandas>=2.0.0',
        'jupyter>=1.0.0', 
        'tslearn==0.5.3.2'
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install sampleproject[dev]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies] # Optional
dev = ["check-manifest"]
test = ["coverage"]


[project.urls]  # Optional
"Homepage" = "https://github.com/ClemensHar/data-eng01"


# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]  # Optional


# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"